[KIOSK-11] 메인 레이아웃 구성

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,9 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <color name="homeBg">#FF778899</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="gray">#424246</color>
+    <color name="green">#FF008000</color>
+    <color name="white">#FFFFFFFF</color>
 </resources>
