--- a/app/src/main/res/menu/drawer_list_item.xml
+++ b/app/src/main/res/menu/drawer_list_item.xml
@@ -1,33 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/grp1"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_item_01"
-            android:checked="true"
-            android:icon="@drawable/earth"
-            android:title="@string/nav_item_01" />
+            android:title="@string/nav_item_01"
+            style="@style/drawer_list_item"/>
+    </group>
+    <group
+        android:id="@+id/grp2"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_item_02"
-            android:icon="@drawable/earth"
-            android:title="@string/nav_item_02" />
+            android:title="@string/nav_item_02"
+            style="@style/drawer_list_item"/>
+    </group>
+    <group
+        android:id="@+id/grp3"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_item_03"
-            android:icon="@drawable/earth"
-            android:title="@string/nav_item_03" />
+            android:title="@string/nav_item_03"
+            style="@style/drawer_list_item"/>
     </group>
-
-    <item android:title="@string/nav_sub_menu">
-        <menu>
-            <item
-                android:id="@+id/nav_sub_menu_item_01"
-                android:icon="@drawable/earth"
-                android:title="@string/nav_sub_menu_item_01" />
-            <item
-                android:id="@+id/nav_sub_menu_item_02"
-                android:icon="@drawable/earth"
-                android:title="@string/nav_sub_menu_item_02" />
-        </menu>
-    </item>
+    <group
+        android:id="@+id/grp4"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_item_04"
+            android:title="@string/nav_item_04"
+            style="@style/drawer_list_item"/>
+    </group>
+    <group
+        android:id="@+id/grp5"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_item_05"
+            android:title="@string/nav_item_05"
+            style="@style/drawer_list_item"/>
+    </group>
 
 </menu>
