--- a/app/src/main/res/layout/recent_menu_list_item.xml
+++ b/app/src/main/res/layout/recent_menu_list_item.xml
@@ -1,37 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recent_menu_card_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:paddingLeft="18dp"
+    android:layout_gravity="center">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/recent_menu_card_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/recent_menu_item_img"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:paddingTop="13.5dp"
+            android:paddingBottom="7dp"
+            android:layout_gravity="center"
+            android:background="@drawable/btn_recent_menu_sample_01_nor" />
+
+        <TextView
+            android:id="@+id/recent_menu_title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_horizontal"
+            android:text="Dark Mocha\nFrappuccino" />
 
-            <ImageView
-                android:id="@+id/recent_menu_item_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"/>
+        <TextView
+            android:id="@+id/recent_menu_kind"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_horizontal"
+            android:text="ice" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/recent_menu_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"/>
-
-            <TextView
-                android:id="@+id/recent_menu_kind"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"/>
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
