--- a/app/src/main/res/layout/recent_menu_list_item.xml
+++ b/app/src/main/res/layout/recent_menu_list_item.xml
@@ -2,10 +2,9 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/recent_menu_card_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="18dp"
-    android:layout_gravity="center">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingLeft="18dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
