[KIOSK-11] 구글지도 바탕으로 현재위치로부터 주변 카페 검색하기 (storeActiviy). 코드정리 전

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,6 +35,7 @@
     <color name="color_22">#eeeeee</color>
     <color name="color_23">#535353</color>
     <color name="color_24">#6a6a6a</color>
+    <color name="color_25">#5a5a5a</color>
 
     <!--underline-->
     <color name="underline_01">#e5e5e5</color>
