--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,10 +36,10 @@
     <color name="color_23">#535353</color>
     <color name="color_24">#6a6a6a</color>
     <color name="color_25">#5a5a5a</color>
+    <color name="color_26">#313131</color>
 
     <!--underline-->
     <color name="underline_01">#e5e5e5</color>
-
 
 
 </resources>
