[KIOSK-11] [KIOSK-66] login activity 구현 0. v1 버전에 초기설정 1. 로그인 레이아웃 작성 2. 로그인 레이아웃에 관련 이벤트 옵션 구현 3. 네트워크 상태 체크 4. 로그인 api 호출 5. 로그인 성공시 preference에 저장 6. 로그인 실패처리 7. 로그인 최초 성공시 자동 로그인

--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -25,7 +25,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/login_text_underline_margin">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -33,20 +34,28 @@
                     android:text="@string/login_id"
                     android:textSize="16sp"
                     android:textColor="@color/color_05"
+                    android:gravity="center|center_horizontal"
                     android:layout_marginLeft="@dimen/login_text_left_margin"
                     android:layout_marginRight="@dimen/login_text_id_right_margin"/>
 
-                <TextView
+                <EditText
+                    android:id="@+id/login_text_id"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:hint="@string/login_text_id"
                     android:textSize="14sp"
                     android:textColorHint="@color/color_06"
-                    android:layout_marginBottom="@dimen/login_text_underline_margin"/>
+                    android:gravity="left|center_horizontal"
+                    android:inputType="textNoSuggestions"
+                    android:maxLines="1"
+                    android:lines="1"
+                    android:maxLength="20"
+                    android:background="@android:color/transparent"/>
 
             </LinearLayout>
 
             <TextView
+                android:id="@+id/login_underline_text_id"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/color_04"/>
@@ -61,7 +70,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/login_text_underline_margin">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -69,22 +79,30 @@
                     android:text="@string/login_passwd"
                     android:textSize="16sp"
                     android:textColor="@color/color_05"
+                    android:gravity="center|center_horizontal"
                     android:layout_marginLeft="@dimen/login_text_left_margin"
-                    android:layout_marginRight="@dimen/login_text_pw_rigth_margin"/>
+                    android:layout_marginRight="@dimen/login_text_pw_right_margin"/>
 
-                <TextView
+                <EditText
+                    android:id="@+id/login_text_pw"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:hint="@string/login_text_passwd"
                     android:textSize="14sp"
-                    android:textColorHint="@color/color_06"/>
+                    android:textColorHint="@color/color_06"
+                    android:gravity="left|center_horizontal"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:lines="1"
+                    android:maxLength="20"
+                    android:background="@android:color/transparent"/>
             </LinearLayout>
 
             <TextView
+                android:id="@+id/login_underline_text_pw"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/color_04"
-                android:layout_marginBottom="@dimen/login_text_underline_margin"/>
+                android:background="@color/color_04"/>
         </LinearLayout>
 
 
