--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/tool_bar_login"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:textColor="@color/color_02"
             android:layout_alignBottom="@id/toolbar"
             android:layout_alignLeft="@id/toolbar"
@@ -33,8 +33,7 @@
             android:background="@color/color_08"
             android:layout_alignBottom="@id/toolbar"/>
 
+        <include layout="@layout/content_login" />
+
     </RelativeLayout>
-
-    <include layout="@layout/content_login" />
-
-</android.support.v4.widget.DrawerLayout>
+</LinearLayout>
