--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -13,31 +13,19 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/theme_color_01"/>
+            android:background="@color/color_01"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/tool_bar_store"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:textColor="@color/color_02"
             android:layout_alignBottom="@id/toolbar"
             android:layout_alignLeft="@id/toolbar"
             android:layout_alignRight="@id/toolbar"
             android:layout_alignTop="@id/toolbar"
             android:gravity="center|center_horizontal"/>
-
-        <ImageView
-            android:id="@+id/btn_store_map"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/toolbar"
-            android:layout_alignRight="@id/toolbar"
-            android:layout_alignTop="@id/toolbar"
-            android:paddingRight="8.5dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:src="@drawable/btn_menu_map_nor"/>
 
         <include layout="@layout/content_store" />
 
