--- a/app/src/main/res/layout/content_store.xml
+++ b/app/src/main/res/layout/content_store.xml
@@ -3,40 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/color_04"
     android:layout_marginTop="?attr/actionBarSize">
 
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/store_recommend_title"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:background="@color/color_05">
-        </ImageView>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignBottom="@id/store_recommend_title"
-            android:layout_alignLeft="@id/store_recommend_title"
-            android:layout_alignRight="@id/store_recommend_title"
-            android:layout_alignTop="@id/store_recommend_title"
-            android:paddingBottom="5.5dp"
-            android:paddingLeft="15dp"
-            android:paddingTop="4dp"
-            android:text="@string/store_recommend_title"
-            android:textColor="@color/color_02"
-            android:textSize="12sp" />
-
-    </RelativeLayout>
-
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/store_recommend_list"
+        android:id="@+id/store_rv_list"
         android:layout_width="match_parent"
-        android:layout_height="245.5dp"
-        android:background="@color/color_02" />
+        android:layout_height="wrap_content"
+        android:background="@color/color_03" />
 
 </LinearLayout>
