--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,8 +21,8 @@
     <color name="color_07">#e2e2e2</color>
     <color name="color_08">#ededed</color>
     <color name="color_09">#fd6246</color>
+    <color name="color_10">#666666</color>
 
-    <color name="color_10">#d1d1d1</color>
     <color name="color_11">#7d7d7d</color>
     <color name="color_12">#ebebeb</color>
     <color name="color_13">#565656</color>
