--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,5 +15,9 @@
     <dimen name="login_text_underline_margin">4dp</dimen>
     <dimen name="login_btn_bottom_margin">29dp</dimen>
 
+    <!--store place item-->
+    <dimen name="store_item_ll_padding">15dp</dimen>
+    <dimen name="store_item_iv_right_margin">13dp</dimen>
+    <dimen name="store_item_text_name_bottom_margin">4.5dp</dimen>
 
 </resources>
